# MyTranslation

./: .dir-locals.el  .gitignore  CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt  YouDaoDict.h  googleTranslate.cc  googleTranslate.h  google_translate.cc  google_translate.h  http_util.cc  http_util.h  main.cc  no_destructor.h  screen_shoot.cc  screen_shoot.h  shortcut.cc  shortcut.h  shortcut_manager.cc  shortcut_manager.h  status.cc  status.h  translate.cc  translate.h  translation_widget.cc  translation_widget.h  trayWidget.cc  trayWidget.h  tray_widget.cc  tray_widget.h
